# peoplecounting-process

./: Dockerfile  app.py  docker-compose.yml  model_standar  model_svm_with_hard_negatives6  process.py  pyproject.toml  requirements.txt  svm_with_hog  utils.py
